--- a/style.css
+++ b/style.css
@@ -6,6 +6,26 @@ h1{
 body{
     background-color: whitesmoke;
 }
+
+.btn1,.btn2{
+    width:150px;
+    background-color: teal;
+    color:black;
+    border:none;
    
+}
 
 
+#city{
+    width:500px;
+    padding:20px;
+    height: 50px;
+    text-align: center;
+    border: none;
+}
+.card1{
+    background-color: #800000;
+}
+.section2{
+    background-color:white;
+}
